force-app/main/default/objects/BusRoute__c/BusRoute__c.object-meta.xml
<CustomObject>
    <description>Bus Route</description>
    <label>Bus Route</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>