force-app/main/default/objects/BusRoute__c/fields/DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationInMinutes__c</fullName>
    <formula>(UNIXTIMESTAMP(EndTime__c)  - UNIXTIMESTAMP(StartTime__c))/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>