force-app/main/default/objects/BusRoute__c/fields/RouteNumber__c.field-meta.xml
<CustomField>
    <fullName>RouteNumber__c</fullName>
    <label>Route Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>