force-app/main/default/objects/BusRoute__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Start Time of the Route</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>