force-app/main/default/objects/BusRoute__c/fields/TotalStops__c.field-meta.xml
<CustomField>
    <fullName>TotalStops__c</fullName>
    <description>Calculates total number of bus stops in a route</description>
    <label>Total Stops</label>
    <summaryForeignKey>Schedule__c.BusRoute__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>