force-app/main/default/objects/BusRoute__c/validationRules/EndTimeBiggest.validationRule-meta.xml
<ValidationRule>
    <fullName>EndTimeBiggest</fullName>
    <active>true</active>
    <description>For Bus Route End Time should always be later than Start Time.</description>
    <errorConditionFormula>StartTime__c   &gt;  EndTime__c</errorConditionFormula>
    <errorDisplayField>EndTime__c</errorDisplayField>
    <errorMessage>Start Time is bigger than End Time.</errorMessage>
</ValidationRule>